Navigation - Fixed Visible Nav Items Bug

--- a/css/style.css
+++ b/css/style.css
@@ -667,6 +667,7 @@ body {
   top: 0;
   left: 0;
   z-index: 1500;
+  overflow: hidden;
   width: 0;
   opacity: 0;
   transition: all 0.8s cubic-bezier(0.83, 0, 0.17, 1);
