--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -37,6 +37,7 @@
     top: 0;
     left: 0;
     z-index: 1500;
+    overflow: hidden;
 
     width: 0;
     opacity: 0;
